add navbar divsions in the index file

--- a/index.html
+++ b/index.html
@@ -1,28 +1,48 @@
 <<!DOCTYPE html>
-<html lang="en" dir="ltr">
+  <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
     <title>Youtube Player Page</title>
   </head>
+
   <body>
-    <div id="header">
-      </div>
+    <div class="navbar">
+      <header class="masthead bg-style">
 
-      <div id="main">
 
-        <div id="left">
-          <div id="player">
+        <div class="logo-container">
+          <div class="btn-hamburger" onclick="toggle()">
+            <i class="material-icons md-dark md-inactive">Menu</i>
           </div>
 
-            <div id="comments">
-            </div>
-
+          <a href="">
+            <div class="logo"></div>
+          </a>
         </div>
 
-          <div id="right">
-          </div>
+        <div class="search">
+          <input type="search" class="searh-input" result="5" name="s" auto="unique_value">
+        </div>
+
+
+    </div>
+
+    <div id="main">
+      <div id="left">
+        <div id="player">
+        </div>
+
+        <div id="comments">
+        </div>
 
       </div>
 
+      <div id="right">
+      </div>
+
+    </div>
+
   </body>
-</html>
+
+  </html>
