--- a/index.html
+++ b/index.html
@@ -1,47 +1,259 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
   <html lang="en" dir="ltr">
 
   <head>
     <meta charset="utf-8">
     <title>Youtube Player Page</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,500,700">
   </head>
 
   <body>
-    <div class="navbar">
+    <div class="main-screen">
+
+      <!-- Masthead -->
+
       <header class="masthead bg-style">
 
+        <!-- Masthead Logo -->
 
         <div class="logo-container">
-          <div class="btn-hamburger" onclick="toggle()">
-            <i class="material-icons md-dark md-inactive">Menu</i>
-          </div>
 
+          <div class="btn-hamburger" onClick="toggle()">
+            <i class="material-icons md-dark md-inactive">menu</i>
+          </div>
           <a href="">
             <div class="logo"></div>
           </a>
+
+
         </div>
+
+        <!-- Search -->
 
         <div class="search">
-          <input type="search" class="searh-input" result="5" name="s" auto="unique_value">
+          <input class="search-input" type=search results=5 name=s autosave=some_unique_value>
+          <button class="search-button">
+            <i class="material-icons md-18 md-dark">search</i>
+        </button>
         </div>
 
+        <!-- Masthead User -->
 
-    </div>
-
-    <div id="main">
-      <div id="left">
-        <div id="player">
+        <div class="user-container">
+          <a href="">
+            <button class="btn-upload">
+              <span>Upload</span>
+            </button>
+          </a>
+          <a href="">
+            <i class="material-icons md-dark">notifications_none</i>
+          </a>
+          <a href="">
+            <div class="btn-profile">
+            </div>
+          </a>
         </div>
 
-        <div id="comments">
-        </div>
+      </header>
+
+      <!-- Navigation Drawer -->
+
+      <div id="nav-drawer" class="bg-style hide">
+
+        <a href="">
+          <i class="material-icons md-dark md-18">home</i>
+          <span>Home</span>
+        </a>
+        <a href="">
+          <i class="material-icons md-dark md-18">account_circle</i>
+          <span>My Channel</span>
+        </a>
+        <a href="">
+          <i class="material-icons md-dark md-18">play_circle_filled</i>
+          <span>Subscriptions</span>
+        </a>
+        <a href="">
+          <i class="material-icons md-dark md-18">history</i>
+          <span>History</span>
+        </a>
+        <a href="">
+          <i class="material-icons md-dark md-18">schedule</i>
+          <span>Watch Later</span>
+        </a>
+        <h5>PLAYLISTS</h5>
+        <a href="">
+          <i class="material-icons md-dark md-18">list</i>
+          <span>Hatem</span>
+        </a>
+        <a href="">
+          <i class="material-icons md-dark md-18">list</i>
+          <span>Safa</span>
+        </a>
+        <a href="">
+          <i class="material-icons md-dark md-18">list</i>
+          <span>Microverse</span>
+        </a>
+
+        <span class="btn-flat">Show more</span>
 
       </div>
 
-      <div id="right">
+      <!-- Scroll -->
+
+      <div class="scroll">
+
+        <!-- Content -->
+
+        <div class="content">
+
+          <!-- Main Column -->
+
+          <article class="main">
+
+            <!-- Player -->
+
+            <section class="player">
+              <iframe src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allowfullscreen></iframe>
+            </section>
+
+            <!-- Lead -->
+
+            <section class="bg-style">
+
+              <!-- Title -->
+
+              <h1>Contributing to Open Source Part I: The Easy Way</h1>
+
+              <!-- Media Object -->
+
+              <div class="media">
+
+                <img class="img-profile media-figure" src="https://yt3.ggpht.com/-UbUyULJMBoM/AAAAAAAAAAI/AAAAAAAAAAA/LGD8KPvBEdc/s88-c-k-no/photo.jpg" alt="">
+
+                <div class="media-body">
+
+                  <h3>The Odin Project</h3>
+
+                  <div class="subscribe">
+                    <button class="subscribe-btn">
+                      <i class="material-icons md-light md-18">play_circle_filled</i>
+                      <span>Subscribe</span>
+                    </button>
+                    <span class="subscribe-count">799</span>
+                  </div>
+
+                </div>
+
+                <span class="lead-view-count">50,016 views</span>
+
+              </div>
+              <hr>
+
+              <!-- Button Bar -->
+
+              <div class="lead-btn-row">
+
+                <div class="lead-social-btn">
+                  <a href="">
+                    <i class="material-icons md-dark">add</i>
+                    <span>Add to</span>
+                  </a>
+                  <a href="">
+                    <i class="material-icons md-dark md-18">share</i>
+                    <span>Share<span>
+                  </a>
+                  <a>
+                    <i class="material-icons md-dark">more_horiz</i>
+                    <span>More</span>
+                  </a>
+                </div>
+                <div class="lead-voting-btn">
+                  <a href="">
+                    <i class="material-icons md-dark md-18">thumb_up</i>
+                    <span>359</span>
+                  </a>
+                  <a>
+                    <i class="material-icons md-dark md-18">thumb_down</i>
+                    <span>14</span>
+                  </a>
+                </div>
+
+              </div>
+            </section>
+
+            <!-- Description -->
+
+            <section class="bg-style">
+              <h3>Published on Feb 27, 2014</h3>
+              <p>How do you contribute to open source? In this video, I'll describe the easiest way to make a simple contribution to an open source project -- without using the command line, a text editor, "forking a repo", or even touching Git outside of Github. I'll also describe what kinds of contributions open source software projects are typically looking for. As an example, I use submitting a student solution to a web development exercise from The Odin Project, a free online curriculum for learning web development with Ruby on Rails. You can find more information about that project at http://theodinproject.com.
+    </p>
+              <div class="btn-flat">
+                <span><strong>SHOW MORE</strong></span>
+              </div>
+            </section>
+
+            <!-- Comments -->
+
+            <section class="comments bg-style">
+
+              <!-- Create Comment -->
+
+              <h3>ALL COMMENTS (2)</h3>
+              <div class="media">
+                <img class="img-profile media-figure" alt="" src="https://yt3.ggpht.com/a/AGF-l78OD14co8EI1BqQiGzYkAv9NRTOloTYxYCR9Q=s900-c-k-c0xffffffff-no-rj-mo">
+                <textarea class="media-body" placeholder="Add a pubic comment..."></textarea>
+              </div>
+
+              <!-- View Comments -->
+
+              <button class="comment-filter">
+                <span>Top comments</span>
+                <i class="material-icons md-dark md-18">arrow_drop_down</i>
+              </button>
+
+              <!-- Comment -->
+
+              <div class="media">
+
+                <!-- Media Object -->
+
+                <img class="img-profile media-figure" src="https://yt3.ggpht.com/a/AGF-l78OD14co8EI1BqQiGzYkAv9NRTOloTYxYCR9Q=s900-c-k-c0xffffffff-no-rj-mo">
+
+                <div class="media-body">
+
+                  <p class="username">Hatem <span>9 months ago</span></p>
+                  <p class="media-body">This is a demo comment.</p>
+
+                  <!-- Comment Social Interactions -->
+
+                  <div class="comment-btn-bar">
+                    <a href="">
+                      <span>Reply</span>
+                    </a>
+                    <a href="">
+                      <i class="material-icons md-dark md-18 md-inactive">thumb_up</i>
+                    </a>
+                    <a href="">
+                      <i class="material-icons md-dark md-18 md-inactive">thumb_down</i>
+                    </a>
+                  </div>
+
+                </div>
+
+              </div>
+            </section>
+
+          </article>
+
+
+
       </div>
 
-    </div>
+    	</div>
+      <!-- JS Script - Nav Drawer -->
+      <script  src="./js/nav-drawer.js"></script>
 
   </body>
 
