erased main div tag due to the conflict

--- a/index.html
+++ b/index.html
@@ -1,30 +1,23 @@
-<<!DOCTYPE html>
-  <html lang="en" dir="ltr">
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <title>Youtube Player Page</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Youtube Player Page</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
 
-  <body>
-    <div class="navbar">
-      <header class="masthead bg-style">
+<body>
+  
 
-
-        <div class="logo-container">
-          <div class="btn-hamburger" onclick="toggle()">
-            <i class="material-icons md-dark md-inactive">Menu</i>
-          </div>
-
-<<<<<<< HEAD
-  <div id="main">
+  <div id="main-screen">
     <aside class="rightbar">
       <header class="recommended_header">
         <section class="up_next">Up next</section>
         <section class="auto_play">
           Autoplay
           <img src="https://lh3.googleusercontent.com/proxy/PPoWvwjkkIbTEiBxwOMLRhW3ZlVJrNaTk6Yk7HT17BOwRRfpwk8T03p2ErJdmq3kKh-cKsqAKRsy9BPQKdmx2R_4kdb90zC8tJao2Js8C0x4DSTphNa4_j3H54YGT-g64iThxvzYNCU" alt="">
-
+          
           <label class="switch">
             <input type="checkbox" checked>
             <span class="slider round"></span>
@@ -146,298 +139,138 @@
       <section class="recommended_item">
         <div class="recommended_img">
           <img src="https://archive.vn/Bss88/87ad6fdeaef86aa051f826e3006c068b60e06de9" alt="">
-=======
-          <a href="">
-            <div class="logo"></div>
-          </a>
->>>>>>> parent of 09fd552... added rigtbar and footer
         </div>
-
-        <div class="search">
-          <input type="search" class="searh-input" result="5" name="s" auto="unique_value">
+        <div class="recommended_info">
+          <span class="recommended_title">
+            Running an SQL Injection Attack - Computerphile
+          </span>
+          <span class="recommended_publisher">
+            Computerphile
+          </span>
+          <span class="recommended_views">
+            2,217,477 views
+          </span>
         </div>
-
-
-    </div>
-
-    <div id="main">
-      <div id="left">
-        <div id="player">
+      </section>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/b6e60231c77705ba5365c14da7c4ecb4ccb6cf86" alt="">
         </div>
-
-        <div id="comments">
+        <div class="recommended_info">
+          <span class="recommended_title">
+            How to prepare for product based companies??
+          </span>
+          <span class="recommended_publisher">
+            Gate Lectures by Ravindrababu Ravula
+          </span>
+          <span class="recommended_views">
+            291,215 views
+          </span>
         </div>
+      </section>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/30341e348ffdfd8ef110d868a3f4892d1dff1719" alt="">
+        </div>
+        <div class="recommended_info">
+          <span class="recommended_title">
+            Visual Basic .Net : Search in Access Database - DataGridView
+          </span>
+          <span class="recommended_publisher">
+            iBasskung
+          </span>
+          <span class="recommended_views">
+            6,047,577 views
+          </span>
+        </div>
+      </section>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/9104e3bbe284cc6497daa29c2c6128b6d4ab68cc" alt="">
+        </div>
+        <div class="recommended_info">
+          <span class="recommended_title">
+            How To Convert pdf to word without software
+          </span>
+          <span class="recommended_publisher">
+            karim hamdadi
+          </span>
+          <span class="recommended_views">
+            12,275,519 views
+          </span>
+        </div>
+      </section>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/f19150ffbc1e56e3c0f4bf3d16f852c1a06c00d9" alt="">
+        </div>
+        <div class="recommended_info">
+          <span class="recommended_title">
+            What Python Projects Should I Build to Get a Job?
+          </span>
+          <span class="recommended_publisher">
+            Real Python
+          </span>
+          <span class="recommended_views">
+            169,155 views
+          </span>
+        </div>
+      </section>
+      <section class="show_more">
+        SHOW MORE
+      </section>
+    </aside>
+  </div>
+  <footer class="footer">
+    <section class="footer_row">
+      <ul class="footer_one">
+        <li><img src="https://seeklogo.com/images/Y/youtube-2017-logo-D185B4FEFA-seeklogo.com.png" alt="YouTube logo"></li>
+        <li>
+          <select id="Language">
+            <option value="English">English</option>
+            <option value="Turkish">Turkish</option>
+            <option value="Arabic">Arabic</option>
+            <option value="Chinese">Chinese</option>
+          </select>
+        </li>
+        <li>
+          <select id="Location">
+            <option value="England">England</option>
+            <option value="Turkey">Turkey</option>
+            <option value="Jordan">Jordan</option>
+            <option value="China">China</option>
+          </select>
+        </li>
+        <li>
+          <select id="Restricted Mode">
+            <option value="Off">Off</option>
+            <option value="On">On</option>
+          </select>
+        </li>
+        <li>History</li>
+        <li>Help</li>
+      </ul>
+    </section>
+    <section class="footer_row">
+      <ul class="footer_two">
+        <li>About</li>
+        <li>Press</li>
+        <li>Copyright</li>
+        <li>Creators</li>
+        <li>Advertise</li>
+        <li>Developers</li>
+      </ul>
+    </section>
+    <section class="footer_row">
+      <ul class="footer_three">
+        <li>Terms</li>
+        <li>Privacy</li>
+        <li>Policy&Safety</li>
+        <li>Test new features</li>
+      </ul>
+    </section>
+  </footer>
 
-      </div>
+</body>
 
-      <div id="right">
-      </div>
-
-    </div>
-
-  </body>
-
-<<<<<<< HEAD
 </html>
-  <html lang="en" dir="ltr">
-
-  <head>
-    <meta charset="utf-8">
-    <title>Youtube Player Page</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,500,700">
-  </head>
-
-  <body>
-    <div class="main-screen">
-
-      <!-- Masthead -->
-
-      <header class="masthead bg-style">
-
-        <!-- Masthead Logo -->
-
-        <div class="logo-container">
-
-          <div class="btn-hamburger" onClick="toggle()">
-            <i class="material-icons md-dark md-inactive">menu</i>
-          </div>
-          <a href="">
-            <div class="logo"></div>
-          </a>
-
-
-        </div>
-
-        <!-- Search -->
-
-        <div class="search">
-          <input class="search-input" type=search results=5 name=s autosave=some_unique_value>
-          <button class="search-button">
-            <i class="material-icons md-18 md-dark">search</i>
-        </button>
-        </div>
-
-        <!-- Masthead User -->
-
-        <div class="user-container">
-          <a href="">
-            <button class="btn-upload">
-              <span>Upload</span>
-            </button>
-          </a>
-          <a href="">
-            <i class="material-icons md-dark">notifications_none</i>
-          </a>
-          <a href="">
-            <div class="btn-profile">
-            </div>
-          </a>
-        </div>
-
-      </header>
-
-      <!-- Navigation Drawer -->
-
-      <div id="nav-drawer" class="bg-style hide">
-
-        <a href="">
-          <i class="material-icons md-dark md-18">home</i>
-          <span>Home</span>
-        </a>
-        <a href="">
-          <i class="material-icons md-dark md-18">account_circle</i>
-          <span>My Channel</span>
-        </a>
-        <a href="">
-          <i class="material-icons md-dark md-18">play_circle_filled</i>
-          <span>Subscriptions</span>
-        </a>
-        <a href="">
-          <i class="material-icons md-dark md-18">history</i>
-          <span>History</span>
-        </a>
-        <a href="">
-          <i class="material-icons md-dark md-18">schedule</i>
-          <span>Watch Later</span>
-        </a>
-        <h5>PLAYLISTS</h5>
-        <a href="">
-          <i class="material-icons md-dark md-18">list</i>
-          <span>Hatem</span>
-        </a>
-        <a href="">
-          <i class="material-icons md-dark md-18">list</i>
-          <span>Safa</span>
-        </a>
-        <a href="">
-          <i class="material-icons md-dark md-18">list</i>
-          <span>Microverse</span>
-        </a>
-
-        <span class="btn-flat">Show more</span>
-
-      </div>
-
-      <!-- Scroll -->
-
-      <div class="scroll">
-
-        <!-- Content -->
-
-        <div class="content">
-
-          <!-- Main Column -->
-
-          <article class="main">
-
-            <!-- Player -->
-
-            <section class="player">
-              <iframe src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allowfullscreen></iframe>
-            </section>
-
-            <!-- Lead -->
-
-            <section class="bg-style">
-
-              <!-- Title -->
-
-              <h1>Contributing to Open Source Part I: The Easy Way</h1>
-
-              <!-- Media Object -->
-
-              <div class="media">
-
-                <img class="img-profile media-figure" src="https://yt3.ggpht.com/-UbUyULJMBoM/AAAAAAAAAAI/AAAAAAAAAAA/LGD8KPvBEdc/s88-c-k-no/photo.jpg" alt="">
-
-                <div class="media-body">
-
-                  <h3>The Odin Project</h3>
-
-                  <div class="subscribe">
-                    <button class="subscribe-btn">
-                      <i class="material-icons md-light md-18">play_circle_filled</i>
-                      <span>Subscribe</span>
-                    </button>
-                    <span class="subscribe-count">799</span>
-                  </div>
-
-                </div>
-
-                <span class="lead-view-count">50,016 views</span>
-
-              </div>
-              <hr>
-
-              <!-- Button Bar -->
-
-              <div class="lead-btn-row">
-
-                <div class="lead-social-btn">
-                  <a href="">
-                    <i class="material-icons md-dark">add</i>
-                    <span>Add to</span>
-                  </a>
-                  <a href="">
-                    <i class="material-icons md-dark md-18">share</i>
-                    <span>Share<span>
-                  </a>
-                  <a>
-                    <i class="material-icons md-dark">more_horiz</i>
-                    <span>More</span>
-                  </a>
-                </div>
-                <div class="lead-voting-btn">
-                  <a href="">
-                    <i class="material-icons md-dark md-18">thumb_up</i>
-                    <span>359</span>
-                  </a>
-                  <a>
-                    <i class="material-icons md-dark md-18">thumb_down</i>
-                    <span>14</span>
-                  </a>
-                </div>
-
-              </div>
-            </section>
-
-            <!-- Description -->
-
-            <section class="bg-style">
-              <h3>Published on Feb 27, 2014</h3>
-              <p>How do you contribute to open source? In this video, I'll describe the easiest way to make a simple contribution to an open source project -- without using the command line, a text editor, "forking a repo", or even touching Git outside of Github. I'll also describe what kinds of contributions open source software projects are typically looking for. As an example, I use submitting a student solution to a web development exercise from The Odin Project, a free online curriculum for learning web development with Ruby on Rails. You can find more information about that project at http://theodinproject.com.
-    </p>
-              <div class="btn-flat">
-                <span><strong>SHOW MORE</strong></span>
-              </div>
-            </section>
-
-            <!-- Comments -->
-
-            <section class="comments bg-style">
-
-              <!-- Create Comment -->
-
-              <h3>ALL COMMENTS (2)</h3>
-              <div class="media">
-                <img class="img-profile media-figure" alt="" src="https://yt3.ggpht.com/a/AGF-l78OD14co8EI1BqQiGzYkAv9NRTOloTYxYCR9Q=s900-c-k-c0xffffffff-no-rj-mo">
-                <textarea class="media-body" placeholder="Add a pubic comment..."></textarea>
-              </div>
-
-              <!-- View Comments -->
-
-              <button class="comment-filter">
-                <span>Top comments</span>
-                <i class="material-icons md-dark md-18">arrow_drop_down</i>
-              </button>
-
-              <!-- Comment -->
-
-              <div class="media">
-
-                <!-- Media Object -->
-
-                <img class="img-profile media-figure" src="https://yt3.ggpht.com/a/AGF-l78OD14co8EI1BqQiGzYkAv9NRTOloTYxYCR9Q=s900-c-k-c0xffffffff-no-rj-mo">
-
-                <div class="media-body">
-
-                  <p class="username">Hatem <span>9 months ago</span></p>
-                  <p class="media-body">This is a demo comment.</p>
-
-                  <!-- Comment Social Interactions -->
-
-                  <div class="comment-btn-bar">
-                    <a href="">
-                      <span>Reply</span>
-                    </a>
-                    <a href="">
-                      <i class="material-icons md-dark md-18 md-inactive">thumb_up</i>
-                    </a>
-                    <a href="">
-                      <i class="material-icons md-dark md-18 md-inactive">thumb_down</i>
-                    </a>
-                  </div>
-
-                </div>
-
-              </div>
-            </section>
-
-          </article>
-
-
-
-      </div>
-
-    	</div>
-      <!-- JS Script - Nav Drawer -->
-      <script  src="./js/nav-drawer.js"></script>
-
-  </body>
-
-  </html>
-=======
-  </html>
->>>>>>> parent of 09fd552... added rigtbar and footer
