Change Comment User

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
                 <div class="media-body">
 
-                  <p class="username">Hatem <span>9 months ago</span></p>
+                  <p class="username">Demo User <span>9 months ago</span></p>
                   <p class="media-body">This is a demo comment.</p>
 
                   <!-- Comment Social Interactions -->
