--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 
 <body>
-  
 
-  <div id="main-screen">
+
+  <div id="main">
     <aside class="rightbar">
       <header class="recommended_header">
         <section class="up_next">Up next</section>
         <section class="auto_play">
           Autoplay
           <img src="https://lh3.googleusercontent.com/proxy/PPoWvwjkkIbTEiBxwOMLRhW3ZlVJrNaTk6Yk7HT17BOwRRfpwk8T03p2ErJdmq3kKh-cKsqAKRsy9BPQKdmx2R_4kdb90zC8tJao2Js8C0x4DSTphNa4_j3H54YGT-g64iThxvzYNCU" alt="">
-          
+
           <label class="switch">
             <input type="checkbox" checked>
             <span class="slider round"></span>
