--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Youtube Player Page</title>
-  <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
+
   <div id="main">
     <aside class="rightbar">
       <header class="recommended_header">
@@ -16,8 +17,259 @@
           Autoplay
           <img src="https://lh3.googleusercontent.com/proxy/PPoWvwjkkIbTEiBxwOMLRhW3ZlVJrNaTk6Yk7HT17BOwRRfpwk8T03p2ErJdmq3kKh-cKsqAKRsy9BPQKdmx2R_4kdb90zC8tJao2Js8C0x4DSTphNa4_j3H54YGT-g64iThxvzYNCU" alt="">
 
+          <label class="switch">
+            <input type="checkbox" checked>
+            <span class="slider round"></span>
+          </label>
+        </section>
+      </header>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/6350ed47768d4be4388f5a8a2b530730b3520802" alt="">
+        </div>
+        <div class="recommended_info">
+          <span class="recommended_title">
+            Contributing to Open Source Part II: The Real Way
+          </span>
+          <span class="recommended_publisher">
+            The Odin Project
+          </span>
+          <span class="recommended_views">
+            29,985 Views
+          </span>
+        </div>
+      </section>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/495e6661840ba5e59315b8d9fbd12e8f79916207" alt="">
+        </div>
+        <div class="recommended_info">
+          <span class="recommended_title">
+            'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+          </span>
+          <span class="recommended_publisher">
+            imtiana
+          </span>
+          <span class="recommended_views">
+            981,543 views
+          </span>
+        </div>
+      </section>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/94ce5195858269ff0184aa735ee160f562dafac4" alt="">
+        </div>
+        <div class="recommended_info">
+          <span class="recommended_title">
+            Programming in Visual Basic .Net How to Connect Access Database to VB.Net
+          </span>
+          <span class="recommended_publisher">
+            WebConcepts
+          </span>
+          <span class="recommended_views">
+            3,580,484 views
+          </span>
+        </div>
+      </section>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/ed9683aa07170cb5421ba283d3aad8e0a3626b97" alt="">
+        </div>
+        <div class="recommended_info">
+          <span class="recommended_title">
+            GitHub - Why Microsoft Paid $7.5B for the Future of Software! - A Case
+          </span>
+          <span class="recommended_publisher">
+            Valuetainment
+          </span>
+          <span class="recommended_views">
+            444,634 views
+          </span>
+        </div>
+      </section>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/e551ad6b2fda543caa6fbd78c98ec95c1f1d0aff" alt="">
+        </div>
+        <div class="recommended_info">
+          <span class="recommended_title">
+            How to create a 3D Terrain with Google Maps and height maps in Photoshop
+          </span>
+          <span class="recommended_publisher">
+            Orange Box Ceo
+          </span>
+          <span class="recommended_views">
+            6,269,391 views
+          </span>
+        </div>
+      </section>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/df21e12d7260fba2247c4dd328453a98929270e9" alt="">
+        </div>
+        <div class="recommended_info">
+          <span class="recommended_title">
+            Convolutional Neural Networks (CNNs) explained
+          </span>
+          <span class="recommended_publisher">
+            deeplizard
+          </span>
+          <span class="recommended_views">
+            239,752 views
+          </span>
+        </div>
+      </section>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/0425d088770dd5fbb04c5830b5d45ceb7f87eb22" alt="">
+        </div>
+        <div class="recommended_info">
+          <span class="recommended_title">
+            Top 10 Linux Job Interview Questions
+          </span>
+          <span class="recommended_publisher">
+            tutoriaLinux
+          </span>
+          <span class="recommended_views">
+            1,236,003 views
+          </span>
+        </div>
+      </section>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/87ad6fdeaef86aa051f826e3006c068b60e06de9" alt="">
+        </div>
+        <div class="recommended_info">
+          <span class="recommended_title">
+            Running an SQL Injection Attack - Computerphile
+          </span>
+          <span class="recommended_publisher">
+            Computerphile
+          </span>
+          <span class="recommended_views">
+            2,217,477 views
+          </span>
+        </div>
+      </section>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/b6e60231c77705ba5365c14da7c4ecb4ccb6cf86" alt="">
+        </div>
+        <div class="recommended_info">
+          <span class="recommended_title">
+            How to prepare for product based companies??
+          </span>
+          <span class="recommended_publisher">
+            Gate Lectures by Ravindrababu Ravula
+          </span>
+          <span class="recommended_views">
+            291,215 views
+          </span>
+        </div>
+      </section>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/30341e348ffdfd8ef110d868a3f4892d1dff1719" alt="">
+        </div>
+        <div class="recommended_info">
+          <span class="recommended_title">
+            Visual Basic .Net : Search in Access Database - DataGridView
+          </span>
+          <span class="recommended_publisher">
+            iBasskung
+          </span>
+          <span class="recommended_views">
+            6,047,577 views
+          </span>
+        </div>
+      </section>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/9104e3bbe284cc6497daa29c2c6128b6d4ab68cc" alt="">
+        </div>
+        <div class="recommended_info">
+          <span class="recommended_title">
+            How To Convert pdf to word without software
+          </span>
+          <span class="recommended_publisher">
+            karim hamdadi
+          </span>
+          <span class="recommended_views">
+            12,275,519 views
+          </span>
+        </div>
+      </section>
+      <section class="recommended_item">
+        <div class="recommended_img">
+          <img src="https://archive.vn/Bss88/f19150ffbc1e56e3c0f4bf3d16f852c1a06c00d9" alt="">
+        </div>
+        <div class="recommended_info">
+          <span class="recommended_title">
+            What Python Projects Should I Build to Get a Job?
+          </span>
+          <span class="recommended_publisher">
+            Real Python
+          </span>
+          <span class="recommended_views">
+            169,155 views
+          </span>
+        </div>
+      </section>
+      <section class="show_more">
+        SHOW MORE
+      </section>
+    </aside>
+  </div>
+  <footer class="footer">
+    <section class="footer_row">
+      <ul class="footer_one">
+        <li><img src="https://seeklogo.com/images/Y/youtube-2017-logo-D185B4FEFA-seeklogo.com.png" alt="YouTube logo"></li>
+        <li>
+          <select id="Language">
+            <option value="English">English</option>
+            <option value="Turkish">Turkish</option>
+            <option value="Arabic">Arabic</option>
+            <option value="Chinese">Chinese</option>
+          </select>
+        </li>
+        <li>
+          <select id="Location">
+            <option value="England">England</option>
+            <option value="Turkey">Turkey</option>
+            <option value="Jordan">Jordan</option>
+            <option value="China">China</option>
+          </select>
+        </li>
+        <li>
+          <select id="Restricted Mode">
+            <option value="Off">Off</option>
+            <option value="On">On</option>
+          </select>
+        </li>
+        <li>History</li>
+        <li>Help</li>
+      </ul>
+    </section>
+    <section class="footer_row">
+      <ul class="footer_two">
+        <li>About</li>
+        <li>Press</li>
+        <li>Copyright</li>
+        <li>Creators</li>
+        <li>Advertise</li>
+        <li>Developers</li>
+      </ul>
+    </section>
+    <section class="footer_row">
+      <ul class="footer_three">
+        <li>Terms</li>
+        <li>Privacy</li>
+        <li>Policy&Safety</li>
+        <li>Test new features</li>
+      </ul>
+    </section>
+  </footer>
 
+</body>
 
-  </body>
-
-  </html>
+</html>
