aligned searcbar,fixed searcbar height, added video length tag on recommended video images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <title>Youtube Player Page</title>
-<<<<<<< HEAD
   <link rel="stylesheet" type="text/css" href="./css/style.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -34,7 +33,7 @@
       <!-- Search -->
 
       <div class="search">
-        <input class="search-input" type=search results=5 name=s autosave=some_unique_value>
+        <input class="search-input" type=search results=5 name=s autosave=some_unique_value placeholder="Search..">
         <button class="search-button">
           <i class="material-icons md-18 md-dark">search</i>
         </button>
@@ -280,6 +279,7 @@
         <section class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/6350ed47768d4be4388f5a8a2b530730b3520802" alt="">
+            <span class="video_length">6:50</span>
           </div>
           <div class="recommended_info">
             <span class="recommended_title">
@@ -296,6 +296,7 @@
         <section class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/495e6661840ba5e59315b8d9fbd12e8f79916207" alt="">
+            <span class="video_length">12:30</span>
           </div>
           <div class="recommended_info">
             <span class="recommended_title">
@@ -312,6 +313,7 @@
         <section class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/94ce5195858269ff0184aa735ee160f562dafac4" alt="">
+            <span class="video_length">9:20</span>
           </div>
           <div class="recommended_info">
             <span class="recommended_title">
@@ -328,6 +330,7 @@
         <section class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/ed9683aa07170cb5421ba283d3aad8e0a3626b97" alt="">
+            <span class="video_length">15:34</span>
           </div>
           <div class="recommended_info">
             <span class="recommended_title">
@@ -344,6 +347,7 @@
         <section class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/e551ad6b2fda543caa6fbd78c98ec95c1f1d0aff" alt="">
+            <span class="video_length">4:45</span>
           </div>
           <div class="recommended_info">
             <span class="recommended_title">
@@ -360,6 +364,7 @@
         <section class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/df21e12d7260fba2247c4dd328453a98929270e9" alt="">
+            <span class="video_length">6:30</span>
           </div>
           <div class="recommended_info">
             <span class="recommended_title">
@@ -376,6 +381,7 @@
         <section class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/0425d088770dd5fbb04c5830b5d45ceb7f87eb22" alt="">
+            <span class="video_length">12:30</span>
           </div>
           <div class="recommended_info">
             <span class="recommended_title">
@@ -392,6 +398,7 @@
         <section class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/87ad6fdeaef86aa051f826e3006c068b60e06de9" alt="">
+            <span class="video_length">2:30</span>
           </div>
           <div class="recommended_info">
             <span class="recommended_title">
@@ -408,6 +415,7 @@
         <section class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/b6e60231c77705ba5365c14da7c4ecb4ccb6cf86" alt="">
+            <span class="video_length">22:30</span>
           </div>
           <div class="recommended_info">
             <span class="recommended_title">
@@ -424,6 +432,7 @@
         <section class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/30341e348ffdfd8ef110d868a3f4892d1dff1719" alt="">
+            <span class="video_length">29:10</span>
           </div>
           <div class="recommended_info">
             <span class="recommended_title">
@@ -440,6 +449,7 @@
         <section class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/9104e3bbe284cc6497daa29c2c6128b6d4ab68cc" alt="">
+            <span class="video_length">21:30</span>
           </div>
           <div class="recommended_info">
             <span class="recommended_title">
@@ -456,6 +466,7 @@
         <section class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/f19150ffbc1e56e3c0f4bf3d16f852c1a06c00d9" alt="">
+            <span class="video_length">19:30</span>
           </div>
           <div class="recommended_info">
             <span class="recommended_title">
