Editing the Style & the index file
-Changing the style.css file and improving it
-Adding more options in the index file

--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
 
       <div class="user-container">
         <a href="">
-          <button class="btn-upload">
-            <span>Upload</span>
-          </button>
+            <i class="material-icons md-dark">publish</i>
         </a>
         <a href="">
           <i class="material-icons md-dark">notifications_none</i>
@@ -261,11 +259,11 @@
 
 
       </div>
-      <aside class="rightbar">
+      <aside class="aside">
         <header class="recommended_header">
           <section class="up_next">Up next</section>
           <section class="auto_play">
-            Autoplay
+            <i class="autoplay">Autoplay</i>
             <img
               src="https://lh3.googleusercontent.com/proxy/PPoWvwjkkIbTEiBxwOMLRhW3ZlVJrNaTk6Yk7HT17BOwRRfpwk8T03p2ErJdmq3kKh-cKsqAKRsy9BPQKdmx2R_4kdb90zC8tJao2Js8C0x4DSTphNa4_j3H54YGT-g64iThxvzYNCU"
               alt="">
@@ -488,8 +486,9 @@
     <footer class="footer">
       <section class="footer_row">
         <ul class="footer_one">
-          <li><img src="https://seeklogo.com/images/Y/youtube-2017-logo-D185B4FEFA-seeklogo.com.png" alt="YouTube logo">
-          </li>
+          <a href="">
+          <li class="logo-footer"><img src="https://seeklogo.com/images/Y/youtube-2017-logo-D185B4FEFA-seeklogo.com.png" alt="YouTube logo"></li>
+        </a>
           <li>
             <select id="Language">
               <option value="English">English</option>
@@ -516,6 +515,7 @@
           <li>Help</li>
         </ul>
       </section>
+      <hr class="footer">
       <section class="footer_row">
         <ul class="footer_two">
           <li>About</li>
