adjusted footer buttons

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <div class="user-container">
         <a href="">
-            <i class="material-icons md-dark">publish</i>
+          <i class="material-icons md-dark">publish</i>
         </a>
         <a href="">
           <i class="material-icons md-dark">notifications_none</i>
@@ -487,32 +487,33 @@
       <section class="footer_row">
         <ul class="footer_one">
           <a href="">
-          <li class="logo-footer"><img src="https://seeklogo.com/images/Y/youtube-2017-logo-D185B4FEFA-seeklogo.com.png" alt="YouTube logo"></li>
-        </a>
+            <li class="logo-footer"><img src="https://seeklogo.com/images/Y/youtube-2017-logo-D185B4FEFA-seeklogo.com.png" alt="YouTube logo">
+            </li>
+          </a>
           <li>
-            <select id="Language">
-              <option value="English">English</option>
-              <option value="Turkish">Turkish</option>
-              <option value="Arabic">Arabic</option>
-              <option value="Chinese">Chinese</option>
-            </select>
+            <button type="button"><span
+                class="material-icons">record_voice_over</span><span>Language:</span>English<span
+                class="material-icons">arrow_drop_down</span></button>
           </li>
           <li>
-            <select id="Location">
-              <option value="England">England</option>
-              <option value="Turkey">Turkey</option>
-              <option value="Jordan">Jordan</option>
-              <option value="China">China</option>
-            </select>
+            <button type="button"><span>Location:</span>Netherlands<span
+                class="material-icons">arrow_drop_down</span></button>
           </li>
           <li>
-            <select id="Restricted Mode">
-              <option value="Off">Off</option>
-              <option value="On">On</option>
-            </select>
+            <button type="button"><span>Restricted Mode:</span>Off<span
+                class="material-icons">arrow_drop_down</span></button>
           </li>
-          <li>History</li>
-          <li>Help</li>
+          <li>
+            <button type="button"><span class="material-icons">
+                hourglass_empty
+              </span><span>History</span></button>
+          </li>
+          <li>
+            <button type="button"><span class="material-icons">
+              help
+              </span><span>Restricted
+                Help</span></button>
+          </li>
         </ul>
       </section>
       <hr class="footer">
