Changing the Footer - HTML & CSS
Changing the footer classes and adding some css style for it

--- a/index.html
+++ b/index.html
@@ -483,58 +483,62 @@
         </section>
       </aside>
     </div>
-    <footer class="footer">
-      <section class="footer_row">
-        <ul class="footer_one">
-          <a href="">
-            <li class="logo-footer"><img src="https://seeklogo.com/images/Y/youtube-2017-logo-D185B4FEFA-seeklogo.com.png" alt="YouTube logo">
-            </li>
-          </a>
-          <li>
-            <button type="button"><span
-                class="material-icons">record_voice_over</span><span>Language:</span>English<span
-                class="material-icons">arrow_drop_down</span></button>
-          </li>
-          <li>
-            <button type="button"><span>Location:</span>Netherlands<span
-                class="material-icons">arrow_drop_down</span></button>
-          </li>
-          <li>
-            <button type="button"><span>Restricted Mode:</span>Off<span
-                class="material-icons">arrow_drop_down</span></button>
-          </li>
-          <li>
-            <button type="button"><span class="material-icons">
-                hourglass_empty
-              </span><span>History</span></button>
-          </li>
-          <li>
-            <button type="button"><span class="material-icons">
-              help
-              </span><span>Restricted
-                Help</span></button>
-          </li>
-        </ul>
-      </section>
-      <hr class="footer">
-      <section class="footer_row">
-        <ul class="footer_two">
-          <li>About</li>
-          <li>Press</li>
-          <li>Copyright</li>
-          <li>Creators</li>
-          <li>Advertise</li>
-          <li>Developers</li>
-        </ul>
-      </section>
-      <section class="footer_row">
-        <ul class="footer_three">
-          <li>Terms</li>
-          <li>Privacy</li>
-          <li>Policy&Safety</li>
-          <li>Test new features</li>
-        </ul>
-      </section>
+
+    <!-- Footer -->
+
+    <footer class="footer bg-style">
+
+      <!-- Button Footer Row -->
+
+      <div class="button-footer">
+        <a src="">
+          <div class="logo"></div>
+        </a>
+        <button>
+          <i class="material-icons md-dark md-18">language</i>
+          <span class="footer-btn">Language: <strong>English</strong></span>
+          <i class="material-icons md-dark md-18">arrow_drop_down</i>
+        </button>
+        <button>
+          <span class="footer-btn">Location: <strong>Worldwide</strong></span>
+          <i class="material-icons md-dark md-18">arrow_drop_down</i>
+        </button>
+        <button>
+          <span class="footer-btn">Restricted Mode: <strong>Off</strong></span>
+          <i class="material-icons md-dark md-18">arrow_drop_down</i>
+        </button>
+        <button>
+          <i class="material-icons md-dark md-18">history</i>
+          <span>History</span>
+        </button>
+        <button>
+          <i class="material-icons md-dark md-18">help</i>
+          <span>Help<span>
+        </button>
+      </div>
+
+      <!-- Primary Links Footer -->
+
+      <ul class="primary-links-footer">
+        <li>About</li>
+        <li>Press</li>
+        <li>Copyright</li>
+        <li>Creators</li>
+        <li>Advertise</li>
+        <li>Developers</li>
+        <li>+YouTube</li>
+      </ul>
+
+      <!-- Secondary Links Footer -->
+
+      <ul class="secondary-links-footer terms">
+        <li>Terms</li>
+        <li>Privacy</li>
+        <li>Policy & Safety</li>
+        <li>Send feedback</li>
+        <li>Try something new!</li>
+      </ul>
+
     </footer>
 
     <!-- JS Script - Nav Drawer -->
