--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Search -->
 
       <div class="search">
-        <input class="search-input" type=search results=5 name=s autosave=some_unique_value placeholder="Search..">
+        <input class="search-input" type=search name=s placeholder="Search..">
         <button class="search-button">
           <i class="material-icons md-18 md-dark">search</i>
         </button>
@@ -112,10 +112,9 @@
           <article class="main">
 
             <!-- Player -->
-
-            <section class="player">
-              <iframe src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allowfullscreen></iframe>
-            </section>
+            <div class="player">
+                <iframe src="https://www.youtube.com/embed/V74l_zS1x8E" allowfullscreen></iframe>
+            </div>
 
             <!-- Lead -->
 
