fixed validation error and warning issues

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
           <!-- Main Column -->
 
-          <article class="main">
+          <div class="main">
 
             <!-- Player -->
             <div class="player">
@@ -122,7 +122,7 @@
 
               <!-- Title -->
 
-              <h1>Contributing to Open Source Part I: The Easy Way</h1>
+              <h2>Contributing to Open Source Part I: The Easy Way</h2>
 
               <!-- Media Object -->
 
@@ -162,7 +162,7 @@
                   </a>
                   <a href="">
                     <i class="material-icons md-dark md-18">share</i>
-                    <span>Share<span>
+                    <span>Share</span>
                   </a>
                   <a>
                     <i class="material-icons md-dark">more_horiz</i>
@@ -226,8 +226,7 @@
 
                 <!-- Media Object -->
 
-                <img class="img-profile media-figure"
-                  src="https://yt3.ggpht.com/a/AGF-l78OD14co8EI1BqQiGzYkAv9NRTOloTYxYCR9Q=s900-c-k-c0xffffffff-no-rj-mo">
+                <img class="img-profile media-figure" src="https://yt3.ggpht.com/a/AGF-l78OD14co8EI1BqQiGzYkAv9NRTOloTYxYCR9Q=s900-c-k-c0xffffffff-no-rj-mo" alt="">
 
                 <div class="media-body">
 
@@ -253,15 +252,15 @@
               </div>
             </section>
 
-          </article>
+          </div>
         </div>
 
 
       </div>
       <aside class="aside">
         <header class="recommended_header">
-          <section class="up_next">Up next</section>
-          <section class="auto_play">
+          <div class="up_next">Up next</div>
+          <div class="auto_play">
             <i class="autoplay">Autoplay</i>
             <img
               src="https://lh3.googleusercontent.com/proxy/PPoWvwjkkIbTEiBxwOMLRhW3ZlVJrNaTk6Yk7HT17BOwRRfpwk8T03p2ErJdmq3kKh-cKsqAKRsy9BPQKdmx2R_4kdb90zC8tJao2Js8C0x4DSTphNa4_j3H54YGT-g64iThxvzYNCU"
@@ -271,9 +270,9 @@
               <input type="checkbox" checked>
               <span class="slider round"></span>
             </label>
-          </section>
+          </div>
         </header>
-        <section class="recommended_item">
+        <div class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/6350ed47768d4be4388f5a8a2b530730b3520802" alt="">
             <span class="video_length">6:50</span>
@@ -289,8 +288,8 @@
               29,985 Views
             </span>
           </div>
-        </section>
-        <section class="recommended_item">
+        </div>
+        <div class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/495e6661840ba5e59315b8d9fbd12e8f79916207" alt="">
             <span class="video_length">12:30</span>
@@ -306,8 +305,8 @@
               981,543 views
             </span>
           </div>
-        </section>
-        <section class="recommended_item">
+        </div>
+        <div class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/94ce5195858269ff0184aa735ee160f562dafac4" alt="">
             <span class="video_length">9:20</span>
@@ -323,8 +322,8 @@
               3,580,484 views
             </span>
           </div>
-        </section>
-        <section class="recommended_item">
+        </div>
+        <div class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/ed9683aa07170cb5421ba283d3aad8e0a3626b97" alt="">
             <span class="video_length">15:34</span>
@@ -340,8 +339,8 @@
               444,634 views
             </span>
           </div>
-        </section>
-        <section class="recommended_item">
+        </div>
+        <div class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/e551ad6b2fda543caa6fbd78c98ec95c1f1d0aff" alt="">
             <span class="video_length">4:45</span>
@@ -357,8 +356,8 @@
               6,269,391 views
             </span>
           </div>
-        </section>
-        <section class="recommended_item">
+        </div>
+        <div class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/df21e12d7260fba2247c4dd328453a98929270e9" alt="">
             <span class="video_length">6:30</span>
@@ -374,8 +373,8 @@
               239,752 views
             </span>
           </div>
-        </section>
-        <section class="recommended_item">
+        </div>
+        <div class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/0425d088770dd5fbb04c5830b5d45ceb7f87eb22" alt="">
             <span class="video_length">12:30</span>
@@ -391,8 +390,8 @@
               1,236,003 views
             </span>
           </div>
-        </section>
-        <section class="recommended_item">
+        </div>
+        <div class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/87ad6fdeaef86aa051f826e3006c068b60e06de9" alt="">
             <span class="video_length">2:30</span>
@@ -408,8 +407,8 @@
               2,217,477 views
             </span>
           </div>
-        </section>
-        <section class="recommended_item">
+        </div>
+        <div class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/b6e60231c77705ba5365c14da7c4ecb4ccb6cf86" alt="">
             <span class="video_length">22:30</span>
@@ -425,8 +424,8 @@
               291,215 views
             </span>
           </div>
-        </section>
-        <section class="recommended_item">
+        </div>
+        <div class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/30341e348ffdfd8ef110d868a3f4892d1dff1719" alt="">
             <span class="video_length">29:10</span>
@@ -442,8 +441,8 @@
               6,047,577 views
             </span>
           </div>
-        </section>
-        <section class="recommended_item">
+        </div>
+        <div class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/9104e3bbe284cc6497daa29c2c6128b6d4ab68cc" alt="">
             <span class="video_length">21:30</span>
@@ -459,8 +458,8 @@
               12,275,519 views
             </span>
           </div>
-        </section>
-        <section class="recommended_item">
+        </div>
+        <div class="recommended_item">
           <div class="recommended_img">
             <img src="https://archive.vn/Bss88/f19150ffbc1e56e3c0f4bf3d16f852c1a06c00d9" alt="">
             <span class="video_length">19:30</span>
@@ -476,10 +475,10 @@
               169,155 views
             </span>
           </div>
-        </section>
-        <section class="show_more">
+        </div>
+        <div class="show_more">
           SHOW MORE
-        </section>
+        </div>
       </aside>
     </div>
 
@@ -490,7 +489,7 @@
       <!-- Button Footer Row -->
 
       <div class="button-footer">
-        <a src="">
+        <a href="">
           <div class="logo"></div>
         </a>
         <button>
@@ -512,7 +511,7 @@
         </button>
         <button>
           <i class="material-icons md-dark md-18">help</i>
-          <span>Help<span>
+          <span>Help</span>
         </button>
       </div>
 
@@ -542,7 +541,7 @@
 
     <!-- JS Script - Nav Drawer -->
     <script src="./js/nav-drawer.js"></script>
-
+ </div>
 </body>
 
 </html>
